--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,9 @@
     padding: 0;
     position: fixed;
     z-index: 100;
-    background-color:#F8F9FA;
+    transition: .2s;
+    /*background-color:#F8F9FA;*/
+    background-color: transparent;
 }
 
 .navbar ul{
@@ -33,8 +35,8 @@
 }
 
 .navbar a:hover{
-    background-color: #141416;
-    color: #F8F9FA;
+    /*background-color: #141416;*/
+    color: #F3A712 !important;
 }
 
 .navbar.scrolled {
@@ -54,7 +56,7 @@
     text-align: center;
     padding: 14px 16px;
     margin: 0;
-    color: #141416;
+    color: #F8F9FA;
     transition: .5s;
 }
 
@@ -75,17 +77,16 @@
 #view1{
     height: 100vh;
     width: 49%;
-    background-image: url("../Gravity-Falls-Wallpaper.jpg");
 }
 
 #view2{
     height: 100vh;
     width: 49%;
-    background-color: #F8F9FA;
+    padding-left: 1vw;
 }
 
 #view2 h1{
-    line-height: 15vh;
+    padding-top: 7%;
     text-align: center;
     font-family: ItalianBreakfast;
     font-size: 4em;
@@ -96,13 +97,12 @@
 }
 
 #attractions{
-    background-color: #F8F9FA;
     height: 100vh;
     width: 100%;
 }
 
 #attractions h1{
-    line-height: 15vh;
+    padding-top: 3%;
     text-align: center;
     font-family: ItalianBreakfast;
     font-size: 4em;
@@ -112,14 +112,14 @@
 
 .col{
     height: 42vh;
-    background-color: #FFF;
     overflow: hidden;
     transition: .5s;
     padding-left: 0px;
 }
 
-.col:hover{
-   filter: brightness(60%);
+.row{
+    margin: 0;
+    padding: 0;
 }
 
 .img{
@@ -129,7 +129,12 @@
     display:block;x
 }
 
-
+#food{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+}
 
 
 
