--- a/css/index.css
+++ b/css/index.css
@@ -54,10 +54,22 @@
     display: block;
     text-decoration: none;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 5vw;
     margin: 0;
     color: #F8F9FA;
     transition: .5s;
+}
+
+#Logo{
+    margin: 0 2.5vw 0 2.5vw;
+    padding: 0;
+    width: 4em;
+    height: auto;
+}
+
+#Logo-view{
+    margin: 0;
+    padding: 0;
 }
 
 .welcome{
@@ -134,9 +146,33 @@
     padding: 0;
     height: 100vh;
     width: 100%;
+    background-color: gray;
+}
+
+#mapping{
+    width: 100%;
+    height: auto;
+}
+
+.attraction-img{
+    padding: 0;
+    height: 80vh;
+    margin: 0 30px 0 30px;
+    width: 30%;
+    background-color: yellow;
+    transition: .5s;
 }
 
 
+#place1:hover{
+    box-shadow: 10px 15px 20px rgb(0, 0, 0, .2);
+}
+#place2:hover{
+    box-shadow: 0px 15px 20px rgb(0, 0, 0, .2);
+}
+#place3:hover{
+    box-shadow: -10px 15px 20px rgb(0, 0, 0, .2);
+}
 
 .footer{
     height: 45vh;
