--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 }
 
 .navbar{
+    top: -100px;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -75,15 +76,50 @@
 .welcome{
     height: 100vh;
     width: 100%;
-    background-image: url("../header.jpg");
+    margin-bottom: 60px;
+    background-image: url("../header.jpg"); 
+    background-color: #141416;
 }
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 #logo{
-    font-family: ItalianBreakfast;
-    height: 99vh;
-    line-height: 99vh;
+    font-family: ItalianBreakfast; 
+    padding-top: 38vh;
     font-size: 10em;
     color: white;
     text-align: center;
+    /*animation: shake 1s infinite;*/
+
+}
+
+
+@keyframes blink{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+#text-start{
+    text-align: center;
+    color: #F8F9FA;
+    font-family: EkkamaiStandard;
+    animation: blink 1s infinite ease alternate-reverse;
 }
 
 #view1{
@@ -174,8 +210,14 @@
     box-shadow: -10px 15px 20px rgb(0, 0, 0, .2);
 }
 
+.att-img{
+    width: 100%;
+    height: 60vh;
+    background-color: red;
+}
+
 .footer{
-    height: 45vh;
+    height: 30vh;
     width: 100%;
     background-color: #1D1F20;
     color: #FAFBFC;
