--- a/css/index.css
+++ b/css/index.css
@@ -45,12 +45,8 @@
   transition: background-color 200ms linear;
 }
 
-.active{
-    background-color: #141416;
-    color: #F8F9FA !important;
-}
-
 .navbar a{
+    text-transform: uppercase;
     font-size: 120%;
     display: block;
     text-decoration: none;
@@ -59,6 +55,16 @@
     margin: 0;
     color: #F8F9FA;
     transition: .5s;
+}
+
+#video-bg{
+    overflow: hidden;
+    z-index: -100;
+    position: fixed;
+    right: 0;
+    left: 0;
+    min-width: 99%;
+    min-height: 99%;
 }
 
 #Logo{
@@ -77,26 +83,13 @@
     height: 100vh;
     width: 100%;
     margin-bottom: 60px;
-    background-image: url("../header.jpg"); 
-    background-color: #141416;
+    /*background-image: url("../header.jpg"); */
+    /*background-color: #141416;*/
 }
 
-@keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
 
 #logo{
-    font-family: ItalianBreakfast; 
+    font-family: ItalianBreakfast;
     padding-top: 38vh;
     font-size: 10em;
     color: white;
@@ -120,6 +113,10 @@
     color: #F8F9FA;
     font-family: EkkamaiStandard;
     animation: blink 1s infinite ease alternate-reverse;
+}
+
+#about{
+    background-color: #F8F9FA;
 }
 
 #view1{
@@ -147,6 +144,7 @@
 #attractions{
     height: 100vh;
     width: 100%;
+    background-color: #F8F9FA;
 }
 
 #attractions h1{
@@ -195,25 +193,33 @@
     height: 80vh;
     margin: 0 30px 0 30px;
     width: 30%;
-    background-color: yellow;
+    background-color: #26532B;
     transition: .5s;
 }
 
 
 #place1:hover{
-    box-shadow: 10px 15px 20px rgb(0, 0, 0, .2);
+    box-shadow: 10px 15px 20px rgb(0, 0, 0, .4);
 }
 #place2:hover{
-    box-shadow: 0px 15px 20px rgb(0, 0, 0, .2);
+    box-shadow: 0px 15px 20px rgb(0, 0, 0, .4);
 }
 #place3:hover{
-    box-shadow: -10px 15px 20px rgb(0, 0, 0, .2);
+    box-shadow: -10px 15px 20px rgb(0, 0, 0, .4);
 }
 
 .att-img{
     width: 100%;
-    height: 60vh;
-    background-color: red;
+    height: 70vh;
+    background-color: #399E5A;
+}
+
+#more-info{
+    font-family: EkkamaiStandard;
+    text-align: center;
+    padding-top: 3vh;
+    font-size: 150%;
+    color: #F8F9FA;
 }
 
 .footer{
