add card effect and smooth scrolling

--- a/css/index.css
+++ b/css/index.css
@@ -188,40 +188,96 @@
     height: auto;
 }
 
-.attraction-img{
+.attraction-div{
     padding: 0;
     height: 80vh;
     margin: 0 30px 0 30px;
     width: 30%;
-    background-color: #26532B;
+    background-color: black;
     transition: .5s;
 }
 
 
-#place1:hover{
+#place1{
     box-shadow: 10px 15px 20px rgb(0, 0, 0, .4);
 }
-#place2:hover{
+#place2{
     box-shadow: 0px 15px 20px rgb(0, 0, 0, .4);
 }
-#place3:hover{
+#place3{
     box-shadow: -10px 15px 20px rgb(0, 0, 0, .4);
 }
 
 .att-img{
     width: 100%;
-    height: 70vh;
-    background-color: #399E5A;
+    height: 100%;
+    background-color:black;
 }
 
-#more-info{
-    font-family: EkkamaiStandard;
+.att-img img{
+    transition: .5s;
+}
+
+#description{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: block;
+    z-index: 2;
+    transition: .5s;
+    
+}
+
+#description p{
+    color: white;
+    font-size: 120%;
     text-align: center;
-    padding-top: 3vh;
-    font-size: 150%;
-    color: #F8F9FA;
+    transform: translateY(80vh);
+    transition: .5s;
 }
 
+#description h1{
+    transform: translateY(-10vh);
+    color: white;
+    transition: .5s;
+}
+
+#place1 img{
+    height: 100%;
+    width: auto;
+    float: right;
+}
+
+.att-img2{
+    height: 100%;
+    width: auto;
+}
+.att-img2 img{
+    height: 100%;
+    width: auto;
+    transform: translate(-15vw);
+}
+
+#description2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: block;
+    z-index: 2;
+    transition: .5s;
+}
+#description2 h1{
+    transform: translateY(-90vh);
+    color: white;
+    transition: .5s;
+}
+#description2 p{
+    color: white;
+    font-size: 120%;
+    text-align: center;
+    transform: translateY(-10vh);
+    transition: .5s;
+}
 .footer{
     height: 30vh;
     width: 100%;
