--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
     src:url("../font/ItalianBreakfast-Regular.ttf");
 }
 
+
 .navbar{
     top: -100px;
     width: 100%;
@@ -73,6 +74,16 @@
     width: 4em;
     height: auto;
 }
+#expand_icon{
+    width: 100%;
+    z-index: 3;
+    font-size: 2vw;
+    text-align: center;
+    color: white;
+    animation: blink 1s infinite ease alternate-reverse;
+
+}
+
 
 #Logo-view{
     margin: 0;
@@ -89,6 +100,7 @@
 
 
 #logo{
+    margin-bottom: 29vh;
     font-family: ItalianBreakfast;
     padding-top: 38vh;
     font-size: 10em;
@@ -147,6 +159,10 @@
     background-color: #F8F9FA;
 }
 
+#attractions p{
+    margin: 1vw;
+}
+
 #attractions h1{
     padding-top: 3%;
     text-align: center;
@@ -166,13 +182,6 @@
 .row{
     margin: 0;
     padding: 0;
-}
-
-.img{
-    max-width:110%;
-    /*max-height:100%;*/
-    margin:auto;
-    display:block;x
 }
 
 #food{
@@ -206,6 +215,17 @@
 }
 #place3{
     box-shadow: -10px 15px 20px rgb(0, 0, 0, .4);
+}
+
+.button5 {
+    width: 20%;
+    height: 50px;
+    margin: 1vw;
+    background-color: transparent;
+    color: black;
+    border: 3px solid #555555;
+    float: left;
+    color: white;
 }
 
 .att-img{
@@ -256,6 +276,7 @@
     height: 100%;
     width: auto;
     transform: translate(-15vw);
+    transition: .5s;
 }
 
 #description2{
@@ -266,6 +287,7 @@
     z-index: 2;
     transition: .5s;
 }
+
 #description2 h1{
     transform: translateY(-90vh);
     color: white;
@@ -278,6 +300,38 @@
     transform: translateY(-10vh);
     transition: .5s;
 }
+
+
+.att-img3 img{
+    height: 100%;
+    width: auto;
+    transform: translate(-15vw);
+    transition: .5s;
+}
+
+#description3{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: block;
+    z-index: 2;
+    transition: .5s;
+    transform: translateY(-50vh);
+}
+#description3 h1{
+    transform: translateY(-70vh);
+    color: white;
+    transition: .5s;
+}
+#description3 p{
+    color: white;
+    font-size: 120%;
+    text-align: center;
+    transform: translateY(10vh);
+    transition: .5s;
+}
+
+
 .footer{
     height: 30vh;
     width: 100%;
