--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,15 @@
     src:url("../font/ItalianBreakfast-Regular.ttf");
 }
 
+@font-face {
+  font-family: Fontcraft;
+  src: url("../font/Fontcraft.otf") format("opentype");
+}
+
+p{
+  font-family: Fontcraft;
+  font-size: 1.5em;
+}
 
 .navbar{
     top: -100px;
@@ -22,7 +31,7 @@
 }
 
 .navbar ul{
-    width: 100%;
+    width: 96%;
     text-align: center;
     list-style-type: none;
     overflow: hidden;
@@ -41,18 +50,14 @@
     color: #F3A712 !important;
 }
 
-.navbar.scrolled {
-  background-color: #fff !important;
-  transition: background-color 200ms linear;
-}
-
 .navbar a{
+  font-family: Fontcraft;
     text-transform: uppercase;
-    font-size: 120%;
+    font-size: 150%;
     display: block;
     text-decoration: none;
     text-align: center;
-    padding: 14px 5vw;
+    padding: 0 5vw 0 5vw;
     margin: 0;
     color: #F8F9FA;
     transition: .5s;
@@ -60,12 +65,13 @@
 
 #video-bg{
     overflow: hidden;
-    z-index: -100;
+    z-index: -10;
     position: fixed;
     right: 0;
     left: 0;
     min-width: 99%;
     min-height: 99%;
+    opacity: .9;
 }
 
 #Logo{
@@ -73,13 +79,14 @@
     padding: 0;
     width: 4em;
     height: auto;
+    font-size: 90%;
 }
 #expand_icon{
     width: 100%;
     z-index: 3;
     font-size: 2vw;
     text-align: center;
-    color: white;
+    color: #F7F7F7;
     animation: blink 1s infinite ease alternate-reverse;
 
 }
@@ -95,7 +102,7 @@
     width: 100%;
     margin-bottom: 60px;
     /*background-image: url("../header.jpg"); */
-    /*background-color: #141416;*/
+    /* background-color: black; */
 }
 
 
@@ -104,7 +111,7 @@
     font-family: ItalianBreakfast;
     padding-top: 38vh;
     font-size: 10em;
-    color: white;
+    color: #F7F7F7;
     text-align: center;
     /*animation: shake 1s infinite;*/
 
@@ -123,7 +130,7 @@
 #text-start{
     text-align: center;
     color: #F8F9FA;
-    font-family: EkkamaiStandard;
+    font-family: Fontcraft;
     animation: blink 1s infinite ease alternate-reverse;
 }
 
@@ -131,32 +138,27 @@
     background-color: #F8F9FA;
 }
 
-#view1{
-    height: 100vh;
-    width: 49%;
-}
-
 #view2{
     height: 100vh;
-    width: 49%;
-    padding-left: 1vw;
+    width: 80%;
+    padding-right: 0;
+    margin-left: 19%;
+    margin-right: 19%;
+    text-align: center;
 }
 
 #view2 h1{
-    padding-top: 7%;
+    padding-top: 9%;
     text-align: center;
-    font-family: ItalianBreakfast;
+    font-family: Fontcraft;
     font-size: 4em;
-}
-#view2 p{
-    font-family: EkkamaiStandard;
-    font-size: 120%;
 }
 
 #attractions{
-    height: 100vh;
+    height: 110vh;
     width: 100%;
     background-color: #F8F9FA;
+    /* background-color: red; */
 }
 
 #attractions p{
@@ -164,9 +166,9 @@
 }
 
 #attractions h1{
-    padding-top: 3%;
+    padding-top: 8%;
     text-align: center;
-    font-family: ItalianBreakfast;
+    font-family: Fontcraft;
     font-size: 4em;
     text-transform: uppercase;
     letter-spacing: 8px;
@@ -220,12 +222,19 @@
 .button5 {
     width: 20%;
     height: 50px;
-    margin: 1vw;
+    margin-top: 15px;
     background-color: transparent;
     color: black;
-    border: 3px solid #555555;
+    border: 3px solid #fff;
     float: left;
-    color: white;
+    color: #F7F7F7;
+    transition: .5s;
+}
+
+.button5:hover{
+  color: #F3A712;
+  background-color: black;
+  border: 3px solid #F3A712;
 }
 
 .att-img{
@@ -245,11 +254,11 @@
     display: block;
     z-index: 2;
     transition: .5s;
-    
+
 }
 
 #description p{
-    color: white;
+    color: #F7F7F7;
     font-size: 120%;
     text-align: center;
     transform: translateY(80vh);
@@ -257,8 +266,8 @@
 }
 
 #description h1{
-    transform: translateY(-10vh);
-    color: white;
+    transform: translateY(-13vh);
+    color: #F7F7F7;
     transition: .5s;
 }
 
@@ -289,12 +298,12 @@
 }
 
 #description2 h1{
-    transform: translateY(-90vh);
-    color: white;
+    transform: translateY(-100vh);
+    color: #F7F7F7;
     transition: .5s;
 }
 #description2 p{
-    color: white;
+    color: #F7F7F7;
     font-size: 120%;
     text-align: center;
     transform: translateY(-10vh);
@@ -319,12 +328,12 @@
     transform: translateY(-50vh);
 }
 #description3 h1{
-    transform: translateY(-70vh);
-    color: white;
+    transform: translateY(-75vh);
+    color: #F7F7F7;
     transition: .5s;
 }
 #description3 p{
-    color: white;
+    color: #F7F7F7;
     font-size: 120%;
     text-align: center;
     transform: translateY(10vh);
