--- a/docs/css/sub-link.css
+++ b/docs/css/sub-link.css
@@ -12,7 +12,9 @@
   font-family: Fontcraft;
   src: url("../font/Fontcraft Ver 2.02.ttf");
 }
-
+body{
+  font-family:Fontcraft;
+}
 .header{
   height: 100vh;
   width: 100%;
@@ -27,7 +29,6 @@
   position: absolute;
   color: white;
   font-size: 10em;
-  font-family: Fontcraft;
   z-index: 1;
 }
 #Header-text{
@@ -69,7 +70,6 @@
 
 
 .information{
-  font-family:Fontcraft;
   font-size: 150%;
   padding: 20px 200px 20px 200px;
   width: 100%;
@@ -92,24 +92,13 @@
    margin-right: auto;
 }
 
-
-
-button {
-  outline:none;
-  height: 40px;
-  text-align: center;
-  width: 130px;
-  border-radius:40px;
-  background: #fff;
-  border: 2px solid #1ECD97;
-  color: #1ECD97;
-  letter-spacing:1px;
-  text-shadow:0;
-  cursor: pointer;
-  transition: .5s all ease;
+.map-frame{
+  width: 100%;
+  height: 500px;
 }
 
-button:hover{
-  background: #1ECD97;
-  color: #fff;
+.map{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
