--- a/css/index.css
+++ b/css/index.css
@@ -114,9 +114,9 @@ p{
 
 
 #logo{
-    margin-bottom: 29vh;
-    font-family: Anchan;
-    padding-top: 38vh;
+    margin-bottom: 26vh;
+    font-family: Fontcraft;
+    padding-top: 44vh;
     font-size: 10em;
     color: #F7F7F7;
     text-align: center;
