big change lelel

--- a/css/sub-link.css
+++ b/css/sub-link.css
@@ -17,7 +17,9 @@
   font-family: Anchan;
   src: url("../font/Anchan.ttf");
 }
-
+p{
+  font-size: 1.2em;
+}
 body{
   font-family:Fontcraft;
 }
@@ -77,11 +79,12 @@ body{
 
 .information{
   font-size: 150%;
-  padding: 20px 200px 20px 200px;
-  width: 100%;
+  padding: 20px 200px 50px 130px;
+  width: 99vw;
   height: auto;
   background-color: white;
   z-index: 3;
+  overflow: hidden;
 }
 .information p{
   padding-top: 15px;
@@ -92,16 +95,75 @@ body{
   padding-bottom: 0;
 }
 
+.text{
+  width: 49%;
+  padding-right: 30px;
+}
+#floor{
+  max-width: 1765px;
+  display: inline-flex;
+  padding-right: 6vw;
+}
+#struct{
+  transition: .5s;
+  width: 7060px;
+  transform: translateX(0px);
+}
+
 .center{
    display: block;
    margin-left: auto;
    margin-right: auto;
 }
 
+.side-img{
+  width:auto;
+  height:525px;
+}
+
+.butto{
+  display: inline-flex;
+  position: absolute;
+  transform: translateY(55vh);
+  z-index: 10;
+}
+#fst{
+  display: block;
+}
+#snd{
+  display: none;
+  margin-left: 20px;
+}
+.next{
+  color: #446E5C;
+  text-decoration: none;
+  text-align: center;
+  bottom: 0;
+  background-color: transparent;
+  border-color: #6A9C78;
+  border: solid;
+  border-width: 2px;
+  padding: 3px 8px 3px 8px;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.next:hover{
+  background-color:#6A9C78;
+  color: white;
+  border-color: #6A9C78;
+}
+
 .map-frame{
   width: 100%;
   height: 500px;
 }
+
+#floor1{
+  display: flex;
+}
+
+
 
 .map{
   height: 100%;
