--- a/css/sub-link.css
+++ b/css/sub-link.css
@@ -1,3 +1,11 @@
+/* ============color==========
+  Green : #4C9F70
+  Greeener : #496F5D
+  #0B0A07 : #0B0A07
+  blue : #6290C3
+  orange : #F3A712
+*/
+
 @font-face{
     font-family: EkkamaiStandard;
     scr:url("../font/EkkamaiStandard-Light.ttf");
@@ -27,7 +35,7 @@ body{
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  background-color: black;
+  background-color: #0B0A07;
   text-align: center;
 }
 .header h1{
@@ -95,6 +103,13 @@ body{
   padding-bottom: 0;
 }
 
+hr{
+  border-width: 4px;
+  margin-bottom: 3vh;
+  background-color: #4C9F70;
+  opacity: .6;
+}
+
 .text{
   width: 49%;
   padding-right: 30px;
@@ -135,12 +150,12 @@ body{
   margin-left: 20px;
 }
 .next{
-  color: #446E5C;
+  color: #496F5D;
   text-decoration: none;
   text-align: center;
   bottom: 0;
   background-color: transparent;
-  border-color: #6A9C78;
+  border-color: #4C9F70;
   border: solid;
   border-width: 2px;
   padding: 3px 8px 3px 8px;
@@ -149,9 +164,9 @@ body{
 }
 
 .next:hover{
-  background-color:#6A9C78;
+  background-color:#4C9F70;
   color: white;
-  border-color: #6A9C78;
+  border-color: #4C9F70;
 }
 
 .map-frame{
@@ -162,7 +177,6 @@ body{
 #floor1{
   display: flex;
 }
-
 
 
 .map{
